--- a/pkgdown/templates/footer.html
+++ b/pkgdown/templates/footer.html
@@ -4,9 +4,8 @@
 </div>
 
 <div class="pkgdown-footer-center">
-  <a href="https://lifecycle.r-lib.org/articles/stages.html#experimental"><img src="https://img.shields.io/badge/lifecycle-experimental-orange.svg" alt="Lifecycle: experimental"></a>
-  <a href="https://github.com/wwbrannon/arl/actions/workflows/check.yaml"><img src="https://github.com/wwbrannon/arl/actions/workflows/check.yaml/badge.svg?branch=main" alt="Check"></a>
-  <a href="https://codecov.io/gh/wwbrannon/arl"><img src="https://codecov.io/gh/wwbrannon/arl/branch/main/graph/badge.svg" alt="Codecov"></a>
+  <a href="https://github.com/wwbrannon/arl/actions/workflows/check.yaml"><img src="https://github.com/wwbrannon/arl/actions/workflows/check.yaml/badge.svg?branch=main" alt="R CMD check"></a>
+  <a href="https://codecov.io/gh/wwbrannon/arl"><img src="https://codecov.io/gh/wwbrannon/arl/branch/main/graph/badge.svg?token=7pxGM6lI73" alt="Codecov"></a>
   <a href="https://CRAN.R-project.org/package=arl"><img src="https://www.r-pkg.org/badges/version/arl" alt="CRAN status"></a>
   <a href="https://opensource.org/licenses/MIT"><img src="https://img.shields.io/badge/License-MIT-yellow.svg" alt="License: MIT"></a>
 </div>
